src/sf/src/main/default/objects/Wallet__c/fields/CurrencyName__c.field-meta.xml
<CustomField>
    <fullName>CurrencyName__c</fullName>
    <defaultValue>&quot;USD&quot;</defaultValue>
    <label>Currency Name</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>