src/sf/src/main/default/objects/Wallet__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Wallets</relationshipLabel>
    <relationshipName>Wallets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>