src/sf/src/main/default/objects/Wallet__c/validationRules/Balance_Cannot_Be_Less_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Balance_Cannot_Be_Less_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Balance__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Balance__c</errorDisplayField>
    <errorMessage>Wallet balance cannot be less than zero</errorMessage>
</ValidationRule>