src/sf/src/main/default/objects/Wallet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CurrencyName__c</columns>
    <columns>Balance__c</columns>
    <columns>IsDefault__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>